src/test/deca/context/invalid/SO/falseprint.deca
// Historique:
//    cree le 22/01/2022

{
    boolean a ;
    println (a) ;
}